# biosi

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Biosi_Codebase_Structure.md  Dockerfile  README.md  TESTING.md  __init__.py  alembic.ini  docker-compose.yml  main.py  pyproject.toml  railway.toml  requirements-dev.txt  requirements.txt  start.sh
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 20260418_0001_initial_schema.py  20260418_0002_add_event_scoring_columns.py  20260420_0003_add_indication_to_events.py  6cd156e98414_clean_malformed_review_status_and_.py
app/: __init__.py  main.py
app/api/: deps.py
app/api/v1/: dashboards.py  events.py  health.py  intelligence.py  jobs.py  reviews.py  router.py
app/core/: config.py  exceptions.py  loe_config.py  logging.py
app/db/: __init__.py  seed.py  seed_competitors.py  seed_data.py  seeds.py  session.py  url.py
app/models/: __init__.py  biosimilar_competitor.py  competitor.py  event.py  mixins.py  review.py  scoring_rule.py  source.py  source_document.py
app/schemas/: dashboard.py  event.py  health.py  ingestion.py  intelligence.py  review.py
app/services/: clinicaltrials_service.py  dashboard_service.py  event_service.py  extraction_service.py  intelligence_interpreter.py  openrouter_service.py  press_release_service.py  review_service.py  scoring_service.py
docker/: Dockerfile  app.dockerfile
docs/: # Biosi Demo End-to-End Build Plan.md  automation-templates.md  n8n-workflows.md
scripts/: purge_and_reingest.py  seeddemodata.py
tests/: conftest.py  test_api_testclient_integration.py  test_seed_data.py  test_services.py
tests/api/v1/: test_health.py  test_jobs.py
tests/helpers/: __init__.py  factories.py
tests/integration/: __init__.py  conftest.py  test_api_v1_contracts.py  test_dashboard_summary.py  test_event_review_scoring_flow.py  test_events_api.py  test_health.py  test_intelligence_briefings.py  test_jobs_clinicaltrials.py  test_jobs_press_release.py  test_jobs_recompute_scores.py  test_n8n_contracts.py  test_reviews_api.py
tests/services/: test_clinicaltrials_service.py  test_dashboard_service.py  test_event_service.py  test_extraction_service.py  test_intelligence_interpreter.py  test_loe_config.py  test_press_release_service.py  test_scoring_service.py
